--- a/auth0_flutter/pubspec.yaml
+++ b/auth0_flutter/pubspec.yaml
@@ -4,8 +4,8 @@ version: 1.7.2
 homepage: https://github.com/auth0/auth0-flutter
 
 environment:
-  sdk: ">=2.17.0 <4.0.0"
-  flutter: ">=3.0.0"
+  sdk: '>=3.4.3 <4.0.0'
+  flutter: ">=3.3.0"
 
 dependencies:
   auth0_flutter_platform_interface: ^1.7.0
